# esp_apriltag

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
.cache/clangd/index/: apriltag.c.09D4AD82BD20B9E3.idx  apriltag.c.5FD18CFD0C773741.idx  apriltag.h.616C787D4745DB96.idx  apriltag.h.6C1436834A4DDD72.idx  apriltag_math.h.053074E6808E322F.idx  apriltag_math.h.C594D25637887400.idx  apriltag_pose.c.7D1A7C21A4F09D29.idx  apriltag_pose.h.6FD359243765643C.idx  apriltag_quad_thresh.c.9F6F6641527E0CC1.idx  bf20a6.c.5302C10CD101F7C5.idx  bf20a6.h.29EF00613431818E.idx  bf20a6_regs.h.DEFC9DA6EDFF022E.idx  bf20a6_settings.h.A2A43C69B3168081.idx  bf3005.c.D32CE7706B73E150.idx  bf3005.h.2851DB0C70A9D904.idx  bf3005_regs.h.542578FF0EDFF67D.idx  cam_hal.c.B5BF33722A4C369B.idx  cam_hal.h.2A8BBB1071F02ECA.idx  debug_print.h.374FC33267572007.idx  debug_print.h.BEB87454B940268C.idx  esp_camera.c.6F6C77F6E5BBB5EA.idx  esp_camera.h.3E76A47683B795ED.idx  g2d.c.44CE0588383FDF79.idx  g2d.h.01CD73582EA6E038.idx  g2d.h.884AE8B8D73682D0.idx  gc0308.c.5518106611538959.idx  gc0308.h.F358585E5A367F0A.idx  gc0308_regs.h.A57EC552E8BD8C84.idx  gc0308_settings.h.E3101885DBC36718.idx  gc032a.c.8DF89B2AB1A1BE5A.idx  gc032a.h.4AAA1BAAE11F351C.idx  gc032a_regs.h.CF013CF11771CB2C.idx  gc032a_settings.h.67C292B911CE5861.idx  gc2145.c.A34B70E6D92D667F.idx  gc2145.h.D122856EB2E4EF8D.idx  gc2145_regs.h.6C33435E87C4DF2B.idx  gc2145_settings.h.A177916DD1EC9A8D.idx  getopt.c.81B19E57D524DA98.idx  (+137 more)
components/esp-apriltag/: CMakeLists.txt
main/: CMakeLists.txt  apriltag.c  apriltag.h  take_picture.c
